fix build + version updates