@@ -10,21 +10,26 @@ repositories {
 
 dependencies {
     implementation group: 'io.javalin', name: 'javalin', version: '4.0.0.ALPHA0'
-    implementation 'info.picocli:picocli:4.6.1'
+    implementation 'info.picocli:picocli:4.6.3'
     implementation 'com.github.callicoder:java-snowflake:a166af56e2'
     implementation libs.log4j.api
     implementation libs.bundles.jackson
     runtimeOnly libs.bundles.log4j.runtime
 
-    implementation 'com.google.dagger:dagger:2.34'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.34'
+    implementation 'com.google.dagger:dagger:2.44'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.44'
     implementation 'javax.inject:javax.inject:1'
-    implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation 'com.google.guava:guava:31.1-jre'
 
-    testImplementation 'org.codehaus.groovy:groovy-all:3.0.8'
-    testImplementation ('org.spockframework:spock-core:2.0-M5-groovy-3.0') {
+    testImplementation 'org.codehaus.groovy:groovy-all:3.0.13'
+    testImplementation ('org.spockframework:spock-core:2.3-groovy-3.0') {
         exclude group: 'org.codehaus.groovy'
     }
+    testRuntimeOnly 'net.bytebuddy:byte-buddy:1.12.18'
+    testRuntimeOnly 'org.objenesis:objenesis:3.2'
+    
+    testImplementation platform('com.agorapulse:gru-bom:1.2.5')
+    testImplementation 'com.agorapulse:gru-http'
 
     // ref https://evojam.com/technology-blog/2020/5/18/the-secret-of-painless-websocket-tests-with-spock-framework
     testImplementation 'com.neovisionaries:nv-websocket-client:2.14'
@@ -34,21 +39,12 @@ dependencies {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(16)
+        languageVersion = JavaLanguageVersion.of(17)
     }
-}
-
-tasks.withType(JavaCompile).configureEach {
-    options.compilerArgs.add("--enable-preview")
-}
-
-tasks.withType(JavaExec).configureEach {
-    jvmArgs("--enable-preview")
 }
 
 tasks.withType(Test).configureEach {
     useJUnitPlatform()
-    jvmArgs("--enable-preview")
 }
 
 application {
